Add DownloadServiceTest