@@ -240,10 +240,13 @@ public class LibraryService {
         Set<String> platformSlugs = Arrays.stream(slugs.split(",")).collect(toSet());
 
         List<Platform> platforms = platformSlugs.stream()
-                .map(slug -> platformRepository.findBySlug(slug).
-                        orElseGet(() -> igdbWrapper.getPlatformBySlug(slug)))
-                .filter(Objects::nonNull)
-                .collect(toList());
+                .map(slug -> {
+                    Optional<Platform> p = platformRepository.findBySlug(slug);
+                    return p.isPresent() ? p : igdbWrapper.getPlatformBySlug(slug);
+                })
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .toList();
 
         library.setPlatforms(platforms);
         libraryRepository.save(library);
